--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>lib.frost</groupId>
+    <groupId>com.github.brettonw</groupId>
     <artifactId>bag</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>lib.frost.bag</name>
+    <name>Bag</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -31,13 +31,6 @@
             <artifactId>log4j-core</artifactId>
             <version>RELEASE</version>
         </dependency>
-        <!--
-        <dependency>
-          <groupId>org.jogamp.jogl</groupId>
-          <artifactId>jogl-all</artifactId>
-          <version>2.3.1</version>
-        </dependency>
-        -->
     </dependencies>
     <build>
         <plugins>
