--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.brettonw</groupId>
     <artifactId>bag</artifactId>
-    <version>5.5.6-SNAPSHOT</version>
+    <version>5.5.6</version>
     <packaging>jar</packaging>
 
     <name>Bag</name>
@@ -29,7 +29,7 @@
         <connection>scm:git:git@github.com:brettonw/bag.git</connection>
         <developerConnection>scm:git:git@github.com:brettonw/bag.git</developerConnection>
         <url>git@github.com:brettonw/bag.git</url>
-        <tag>HEAD</tag>
+        <tag>bag-5.5.6</tag>
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
