--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.brettonw</groupId>
     <artifactId>bag</artifactId>
-    <version>5.5.7-SNAPSHOT</version>
+    <version>5.5.7</version>
     <packaging>jar</packaging>
 
     <name>Bag</name>
