--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.brettonw</groupId>
     <artifactId>bag</artifactId>
-    <version>5.5.9-SNAPSHOT</version>
+    <version>5.5.9</version>
     <packaging>jar</packaging>
 
     <name>Bag</name>
@@ -62,6 +62,10 @@
     </dependencies>
 
     <distributionManagement>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/release</url>
+        </repository>
         <snapshotRepository>
             <id>ossrh</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
