--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>bag</artifactId>
-    <version>5.8.1-SNAPSHOT</version>
+    <version>5.9.0</version>
     <packaging>jar</packaging>
 
     <name>Bag</name>
