atteo is moved to "provided", as it is only needed for the compilation step and shouldn't be passed as a transitive dependency to other projects

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <groupId>org.atteo.classindex</groupId>
             <artifactId>classindex</artifactId>
             <version>RELEASE</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
